Fix navbar spacing

--- a/app/assets/stylesheets/api/comments.scss
+++ b/app/assets/stylesheets/api/comments.scss
@@ -40,6 +40,7 @@
 
 .add-input{
   width: 150px;
+  outline: none;
 }
 
 .add-button{
