--- a/app/assets/stylesheets/api/products.scss
+++ b/app/assets/stylesheets/api/products.scss
@@ -197,6 +197,7 @@
   outline: none;
   margin-top: 10px;
   color: black;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .cart-section button:hover{
